# rust-project-template

./: .gitignore  Cargo.toml
src/: alloc.rs  args.rs  bytesize.rs  config.rs  logger.rs  main.rs
