[package]
name = "rust-project-template"
description = ""
version = "0.1.0"
authors = ["Alexander Sagen <alexander@sagen.me>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
bytesize = "1.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"